--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
