--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start-client": "react-scripts start",
-    "start": "npm run build && (cd server && npm start)",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
