--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framework7-react": "^5.7.12",
     "jQuery": "^1.7.4",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
