--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^1.3.0",
     "react-compound-timer": "^1.2.0",
     "react-dom": "^16.13.1",
+    "react-hooks-helper": "^1.6.0",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
