--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jQuery": "^1.7.4",
     "jquery": "^3.5.1",
     "jwt-decode": "^3.1.1",
+    "npm-lifecycle": "^3.1.5",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
