--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.2",
     "bootstrap-social": "^5.1.1",
+    "compass-mixins": "^0.12.10",
     "emailjs": "^3.3.0",
     "emailjs-com": "^2.6.4",
     "font-awesome": "^4.7.0",
     "framework7-react": "^5.7.12",
-    "jQuery": "^1.7.4",
     "jquery": "^3.5.1",
     "jwt-decode": "^3.1.1",
+    "node-sass": "^4.14.1",
+    "orbit-controls-es6": "^2.0.1",
     "popper.js": "^1.16.1",
+    "postprocessing": "^6.17.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-compound-timer": "^1.2.0",
@@ -31,7 +34,9 @@
     "react-hooks-helper": "^1.6.0",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "three": "^0.119.1",
+    "tweakpane": "^1.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
