--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hooks-helper": "^1.6.0",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "3.4.3"
   },
   "scripts": {
