--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "credenz20",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://credenz.in/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.31",
