--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animate-components": "^1.4.8",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "bootstrap-social": "^5.1.1",
     "compass-mixins": "^0.12.10",
     "emailjs": "^3.3.0",
     "emailjs-com": "^2.6.4",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^3.2.0",
     "framework7-react": "^5.7.12",
     "jquery": "^3.5.1",
     "jwt-decode": "^3.1.1",
