--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "axios": "^0.21.0",
         "bootstrap": "^4.5.2",
         "bootstrap-social": "^5.1.1",
+        "dotenv": "^8.2.0",
         "emailjs": "^3.3.0",
         "emailjs-com": "^2.6.4",
         "font-awesome": "^4.7.0",
