--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 REACT_APP_API_URL=http://localhost:5000
 
+IPPO_TEST_PUBLIC=pk_test_PMTwU39TjbUC
+IPPO_TEST_SECRET=sk_test_UYkRAbTh1082YnTIIFNy1NMgBUafLbTZ2tzoRhru
+
+IPPO_LIVE_PUBLIC=pk_live_LxGuVR5mwBuy
+IPPO_LIVE_SECRET=sk_live_eaSKsfOhheBG4PiKerw9ihnwLc84WYLKc2I9IL4u
+
 /*https://backend.credenz.in*/
