--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=https://backend.credenz.in
 
 IPPO_TEST_PUBLIC=pk_test_PMTwU39TjbUC
 IPPO_TEST_SECRET=sk_test_UYkRAbTh1082YnTIIFNy1NMgBUafLbTZ2tzoRhru
