--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_API_URL=http://localhost:5000
+/*REACT_APP_API_URL=http://localhost:5000*/
+REACT_APP_API_URL=https://backend.credenz.in
 
 
 
